// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> render the <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 ftIegk"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-2 ckijbL"
  >
    <p
      class="header__Link-djltcn-3 dpfVZh"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> render the <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-2 ckijbL"
>
  <p
    class="header__Link-djltcn-3 fVdhrt"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 kRgFRC"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-2 ckijbL"
  >
    <div
      class="header__Group-djltcn-1 cIqXkZ"
    >
      <p
        class="header__Link-djltcn-3 fVdhrt"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-3 fVdhrt"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-1 cIqXkZ"
    >
      <div
        class="header__Search-djltcn-6 dgzXLg"
      >
        <button
          class="header__SearchIcon-djltcn-7 jUqGAn"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-9 jFMRzc"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-10 dXmrbD"
      >
        <button
          class="header__Picture-djltcn-4 lofUGH"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-5 ebgOuO"
        >
          <div
            class="header__Group-djltcn-1 cIqXkZ"
          >
            <button
              class="header__Picture-djltcn-4 lofUGH"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-3 fVdhrt"
            >
              John Doe
            </p>
          </div>
          <div
            class="header__Group-djltcn-1 cIqXkZ"
          >
            <p
              class="header__Link-djltcn-3 fVdhrt"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-2 header__Feature-djltcn-13 ckijbL eapkbY"
  >
    <h2
      class="header__FeatureCallOut-djltcn-15 hpUmGM"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-14 kSvXuQ"
    >
      Forever alone in a crowd..
    </p>
    <button
      class="header__PlayButton-djltcn-8 hSYaiH"
    >
      Play
    </button>
  </div>
</div>
`;
